<!--
  ~ Copyright (C) 2020 Link Development
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">File Picker</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="record_video">Record Video</string>
    <string name="pick_files">Pick Files</string>
    <string name="pick_images">Pick Images</string>
    <string name="pick_videos">Pick Videos</string>
    <string name="pdfs_doc"><![CDATA[PDFs & DOCs]]></string>
    <string name="capture">Capture</string>
    <string name="pick">Pick</string>
    <string name="single_selection">Single Selection</string>
    <string name="multiple_selection">Multiple selection</string>
    <string name="selection_types">Selection types</string>
    <string name="mime_types">Mime types</string>
    <string name="selected_files">Selected files</string>
    <string name="allow_sync_with_gallery">Allow sync with gallery</string>
</resources>
