<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 Link Development
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/crdLayoutCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCapture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_15"
            android:layout_marginBottom="@dimen/margin_12"
            android:gravity="center_vertical|start"
            android:text="@string/capture"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCapturePhoto"
        android:layout_width="@dimen/pick_btn_width"
        android:layout_height="@dimen/btns_height"
        android:background="@color/colorAccent"
        android:text="@string/capture_photo"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnRecordVideo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRecordVideo"
        android:layout_width="@dimen/pick_btn_width"
        android:layout_height="@dimen/btns_height"
        android:background="@color/colorAccent"
        android:text="@string/record_video"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/btnCapturePhoto" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/captureBtnsSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_15"
        app:constraint_referenced_ids="btnCapturePhoto,btnRecordVideo"
        app:layout_constraintTop_toBottomOf="@id/crdLayoutCapture" />

    <CheckBox
        android:id="@+id/chbAllowSyncWithGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_15"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/margin_5"
        android:text="@string/allow_sync_with_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/captureBtnsSection" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/captureSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="captureBtnsSection,chbAllowSyncWithGallery"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>